--- a/sections/navigation/navigation.html
+++ b/sections/navigation/navigation.html
@@ -7,22 +7,22 @@
   left: 0;
   width: 100%;
   height: var(--nav-height);
-  background: rgba(13, 13, 13, 0.8);
-  backdrop-filter: blur(10px);
-  border-bottom: 1px solid var(--color-border);
+  background: transparent; /* 完全透明，不遮挡背景 */
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1); /* 淡化边框 */
   z-index: 1000;
   transition: all var(--transition);
 }
 
 .navbar.scrolled {
-  background: rgba(13, 13, 13, 0.95);
+  background: rgba(13, 13, 13, 0.95); /* 滚动后添加背景 */
+  backdrop-filter: blur(10px); /* 滚动后才添加毛玻璃效果 */
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
 }
 
 .nav-container {
-  max-width: var(--container-width);
+  max-width: 100%; /* 使用全宽 */
   margin: 0 auto;
-  padding: 0 var(--spacing-lg);
+  padding: 0 3rem; /* 与 Banner 容器保持一致 */
   height: 100%;
   display: flex;
   align-items: center;
@@ -149,7 +149,7 @@
 <nav class="navbar">
   <div class="nav-container">
     <div class="nav-logo">
-      <img src="sections/navigation/logo.jpg" alt="TreClip" class="logo-img">
+      <img src="sections/banner/logo.jpg" alt="TreClip" class="logo-img">
     </div>
 
     <ul class="nav-menu">
