--- a/sections/navigation/navigation.html
+++ b/sections/navigation/navigation.html
@@ -8,7 +8,7 @@
   width: 100%;
   height: var(--nav-height);
   background: transparent; /* 完全透明，不遮挡背景 */
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1); /* 淡化边框 */
+  border-bottom: none; /* 去除边框线 */
   z-index: 1000;
   transition: all var(--transition);
 }
@@ -26,16 +26,24 @@
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-between; /* Logo+Menu 靠左，Actions 靠右 */
+}
+
+/* 左侧区域：Logo + Menu */
+.nav-left {
+  display: flex;
+  align-items: center;
+  gap: 2rem; /* Logo 和菜单之间的间距 */
 }
 
 .nav-logo .logo-img {
-  height: 32px;
+  height: 96px; /* 原来 32px 的三倍 */
+  /* 使用透明背景 PNG，不需要混合模式 */
 }
 
 .nav-menu {
   display: flex;
-  gap: var(--spacing-xl);
+  gap: 4rem; /* 菜单项之间的间距加大 */
 }
 
 .nav-menu a {
@@ -112,7 +120,7 @@
 
 /* Mobile Responsive */
 @media (max-width: 991px) {
-  .nav-menu,
+  .nav-left .nav-menu,
   .nav-actions {
     display: none;
   }
@@ -141,30 +149,35 @@
   }
 
   .nav-logo .logo-img {
-    height: 28px;
+    height: 64px; /* 移动端也相应调整 */
   }
 }
 </style>
 
 <nav class="navbar">
   <div class="nav-container">
-    <div class="nav-logo">
-      <img src="sections/banner/logo.jpg" alt="TreClip" class="logo-img">
+    <!-- 左侧区域：Logo + 导航菜单 -->
+    <div class="nav-left">
+      <div class="nav-logo">
+        <img src="sections/navigation/logo.png" alt="TreClip" class="logo-img">
+      </div>
+
+      <ul class="nav-menu">
+        <li><a href="#features">Features</a></li>
+        <li><a href="#solutions">Solutions</a></li>
+        <li><a href="#resources">Resources</a></li>
+        <li><a href="#pricing">Pricing</a></li>
+        <li><a href="#ai-studio">AI Studio</a></li>
+      </ul>
     </div>
 
-    <ul class="nav-menu">
-      <li><a href="#features">Features</a></li>
-      <li><a href="#solutions">Solutions</a></li>
-      <li><a href="#resources">Resources</a></li>
-      <li><a href="#pricing">Pricing</a></li>
-      <li><a href="#ai-studio">AI Studio</a></li>
-    </ul>
-
+    <!-- 右侧区域：登录/注册按钮 -->
     <div class="nav-actions">
       <a href="#" class="btn-text">Sign in</a>
       <a href="#" class="btn-primary">Sign up</a>
     </div>
 
+    <!-- 移动端菜单按钮 -->
     <button type="button" class="mobile-menu-toggle" aria-label="Toggle menu">
       <span></span>
       <span></span>
