--- a/sections/banner/banner.html
+++ b/sections/banner/banner.html
@@ -160,7 +160,7 @@
 .video-cards-container {
   position: absolute;
   right: 3rem; /* 与容器边距保持一致 */
-  top: calc(var(--nav-height) + 30rem); /* 改为 top 定位，不受内容高度影响 */
+  top: calc(var(--nav-height) + 32rem); /* 改为 top 定位，不受内容高度影响 */
   z-index: 3;
 }
 
@@ -179,14 +179,20 @@
   flex-shrink: 0; /* 防止收缩 */
 }
 
-/* 卡片标题（显示在卡片上方）*/
+/* 卡片标题（显示在卡片下方）*/
 .card-title {
   font-size: 0.75rem;
   font-weight: 600;
   color: var(--color-text);
-  text-align: center;
+  text-align: left; /* 左侧对齐 */
   letter-spacing: 0.05em;
   white-space: nowrap;
+  order: 2; /* 标题排在后面 */
+}
+
+/* 卡片主体 */
+.video-card {
+  order: 1; /* 卡片排在前面 */
 }
 
 /* 背景切换卡片 - 更长的高度 */
@@ -347,44 +353,44 @@
     <!-- 右下角背景切换卡片 - 水平排列不换行 -->
     <div class="video-cards-container">
       <div class="video-cards-grid">
-        <!-- 背景切换卡片 1 - Features -->
+        <!-- 背景切换卡片 1 -->
         <div class="video-card-wrapper">
-          <div class="card-title">Features</div>
           <div class="video-card active" data-bg-index="0">
-            <img src="sections/gallery/gallery-1.jpg" alt="Features Background">
+            <img src="sections/gallery/gallery-1.jpg" alt="AI SCROLL Background">
           </div>
+          <div class="card-title">AI SCROLL</div>
         </div>
 
-        <!-- 背景切换卡片 2 - Solutions -->
+        <!-- 背景切换卡片 2 -->
         <div class="video-card-wrapper">
-          <div class="card-title">Solutions</div>
           <div class="video-card" data-bg-index="1">
-            <img src="sections/gallery/gallery-2.jpg" alt="Solutions Background">
+            <img src="sections/gallery/gallery-2.jpg" alt="AI SCROLL Background">
           </div>
+          <div class="card-title">AI SCROLL</div>
         </div>
 
-        <!-- 背景切换卡片 3 - Resources -->
+        <!-- 背景切换卡片 3 -->
         <div class="video-card-wrapper">
-          <div class="card-title">Resources</div>
           <div class="video-card" data-bg-index="2">
-            <img src="sections/gallery/gallery-3.jpg" alt="Resources Background">
+            <img src="sections/gallery/gallery-3.jpg" alt="AI SCROLL Background">
           </div>
+          <div class="card-title">AI SCROLL</div>
         </div>
 
-        <!-- 背景切换卡片 4 - Pricing -->
+        <!-- 背景切换卡片 4 -->
         <div class="video-card-wrapper">
-          <div class="card-title">Pricing</div>
           <div class="video-card" data-bg-index="3">
-            <img src="sections/gallery/gallery-4.jpg" alt="Pricing Background">
+            <img src="sections/gallery/gallery-4.jpg" alt="AI SCROLL Background">
           </div>
+          <div class="card-title">AI SCROLL</div>
         </div>
 
-        <!-- 背景切换卡片 5 - AI Studio -->
+        <!-- 背景切换卡片 5 -->
         <div class="video-card-wrapper">
-          <div class="card-title">AI Studio</div>
           <div class="video-card" data-bg-index="4">
-            <img src="sections/gallery/gallery-5.jpg" alt="AI Studio Background">
+            <img src="sections/gallery/gallery-5.jpg" alt="AI SCROLL Background">
           </div>
+          <div class="card-title">AI SCROLL</div>
         </div>
       </div>
     </div>
